🐛 [Fix] Importation (common.js ->ECMAScript)

--- a/views/table.html
+++ b/views/table.html
@@ -32,7 +32,7 @@
     </div>
 
     <script>
-        const { BACKEND_ENDPOINT } = required('../config');
+        import {BACKEND_ENDPOINT} from '../config.js';
         const appdata = {
             data() {
                 return {
