--- a/views/table.html
+++ b/views/table.html
@@ -32,7 +32,7 @@
     </div>
 
     <script>
-        import {BACKEND_ENDPOINT} from '../config.js';
+        const BACKEND_ENDPOINT = process.env.BACKEND_ENDPOINT;
         const appdata = {
             data() {
                 return {
