🐛 [Fix] BACKEND_ENDPOINT in "table.html"

--- a/views/table.html
+++ b/views/table.html
@@ -32,7 +32,7 @@
     </div>
 
     <script>
-        const BACKEND_ENDPOINT = process.env.BACKEND_ENDPOINT;
+        const BACKEND_ENDPOINT = "http://localhost:30053"
         const appdata = {
             data() {
                 return {
