🐛 [Fix] Backend Endpoint in "table.html"

--- a/views/table.html
+++ b/views/table.html
@@ -32,7 +32,7 @@
     </div>
 
     <script>
-        const BACKEND_ENDPOINT = "http://localhost:30053"
+        const BACKEND_ENDPOINT = "http://153.120.121.157:30053"
         const appdata = {
             data() {
                 return {
